--- a/qr.html
+++ b/qr.html
@@ -8,7 +8,7 @@
 <body>
 	<header>
 		<h1>Welcome to PHED QR Landing Portal !</h1>
-		<img src="./PHED-logo-transparent.png" alt="">
+		<img src="./img/PHED-logo-transparent.png" alt="">
 	</header>
 	<main>
 		<!-- <div class="qr-code">
